# bookpetproject

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml  setup.cfg
.github/workflows/: system_check.yml
src/: alembic.ini  main.py
src/configs/: test_config.py
src/db/: configs.py
src/project_migrations/: env.py
src/project_migrations/versions/: 2023_12_02_1353:84d462f06acb.py
src/users/: models.py  schemas.py  views.py
src/users/tests/: user_api_test.py
