[tool.poetry]
name = "bookpetproject"
version = "0.1.0"
description = "my first pet project with FastAPI and Poetry"
authors = ["gregory_spectr  <gregory@digital-spectr.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.2"
pre-commit = "^3.5.0"
aiosqlite = "^0.19.0"
httpx = "^0.25.2"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
ignore = [
    "F401", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D200", "D204", "D205", "D400", "E731", "E722", "F821",
    "E402", "F405", "F403", "D208", "E203"
]

exclude = [
    "*/__init__.py",
    "*/tests/*",
    "*/apps.py",
    "*/router.py",
    "*/schemas.py",
    "project_migrations/*",
    ".gitignore",
    "*.env*",
    "*/alembic*",
]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
lines-between-types = 1
section-order = ["future", "standard-library", "first-party", "third-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.pycodestyle]
max-doc-length = 88